--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "command": "cl",
             "args": [
                 "/EHsc",
-                "/std:c++17",  // Use C++17 or later
+                "/std:c++17",
                 "mergesort.cpp",
                 "/Fe:mergesort.exe"
             ],
